fixtures/semantic/invalid/13-vr-tx5-text-surface-prop.fl
component TextWithSurfaceProp {
  surface {
    text {
      fill: token(color.surface.default)
    }
  }
}
